# quipu

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: file-organization.qp  git-workflow.qp  neovim-editing.qp  screen-capture.qp
src/: main.rs  parser.rs  playback.rs  pty.rs  types.rs
tree-sitter-quipu/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-quipu/bindings/c/: tree-sitter-typecast.pc.in
tree-sitter-quipu/bindings/go/: binding.go  binding_test.go
tree-sitter-quipu/bindings/node/: binding.cc  index.js
tree-sitter-quipu/bindings/python/tests/: test_binding.py
tree-sitter-quipu/bindings/python/tree_sitter_typecast/: __init__.py  binding.c
tree-sitter-quipu/bindings/rust/: build.rs  lib.rs
tree-sitter-quipu/bindings/swift/TreeSitterTypecast/: typecast.h
tree-sitter-quipu/bindings/swift/TreeSitterTypecastTests/: TreeSitterTypecastTests.swift
tree-sitter-quipu/queries/: highlights.scm  injections.scm  textobjects.scm
tree-sitter-quipu/src/: grammar.json  node-types.json  parser.c
tree-sitter-quipu/test/corpus/: directives.txt
