[package]
name = "quipu"
version = "0.1.6"
edition = "2024"

[dependencies]
# Error handling
anyhow = "1.0"
# CLI
clap = { version = "4", features = ["derive"] }
# Terminal control
crossterm = "0.29"
# Signal handling
ctrlc = "3.5"
# Parsing
nom = "8.0"
# PTY management
portable-pty = "0.9"
# Random jitter
rand = "0.10"
thiserror = "2.0"
# Async runtime & timing
tokio = { version = "1", features = ["full"] }
